--- a/routes/pages/dbPages/showData.html
+++ b/routes/pages/dbPages/showData.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Database</title>
     <style>
         *{
             color: white;
             margin: 0;
             padding: 0;
             font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+        }
+        body{
+          background: #00d9ff12;
         }
         main{
             position: absolute;
@@ -34,7 +37,6 @@
             padding: 10px;
             margin: 10px;
         }
-
         main div div label{
             width: 10vw;
         }
@@ -44,14 +46,17 @@
     <main id="main"></main>
 
     <script>
-      const url = window.location;
+      const url = 'http://' + window.location.host
+
+
+      console.log(url)
 
       const $ = (el) => document.getElementById(el);
 
       const body = $("main");
 
       async function getData() {
-        const req = await fetch(url + "api/db/data");
+        const req = await fetch(url + "/api/db/data");
         const { message } = await req.json();
 
         const div = document.createElement("div");
@@ -66,7 +71,6 @@
         });
         body.appendChild(div);
       }
-
       getData();
     </script>
   </body>
