Ya tenemos todo funcional, hay que hacer algunas pruebas y tal vez mejorar algo del diseño, pero en si ya esta todo funcional

--- a/routes/pages/landPage.html
+++ b/routes/pages/landPage.html
@@ -12,6 +12,6 @@
     thigs, if you want to consult a database with usernames and passwords, put
     in the pathname <a href="/db">/db</a> or if you want to organize another
     database with different order algorithms, put in the path
-    <a href="/api/order">/order</a>
+    <a href="/order">/order</a>
   </body>
 </html>
