--- a/routes/pages/orderPages/explain.html
+++ b/routes/pages/orderPages/explain.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Order Algorithms</h1><br/>Welcome to order algorithms, here you will be able to order a public database, which you can see in the path next path <a href="/api/order/data">Database</a>, you will also be able to order these registers using this algoritms and giving as a parameter an atribute of the database, here are some examples <a href="/api/order/bubble/cod_institucion">Bubble sort</a>, <a href="/api/order/quick/cod_institucion">Quick sort</a>, <a href="/api/order/merge/cod_institucion">Merge sort</a>,<a href="/api/order/counting/cod_institucion">Counting sort</a>, <a href="/api/order/radix/cod_institucion">Radix sort</a>,you can use whichever you want writting in the current path <b>"/ORDER_ALGORITHM/ATTRIBUTE"</b>, if the attribure is <b>NaN</b> or it contains constraits in the algoritm (decimals or negative number) it will throw an error, thanks for reading this and feel free to use this API
+    <h1>Order Algorithms</h1><br/>Welcome to order algorithms, here you will be able to order a public database, which you can see in the path next path <a href="/order/data">Database</a>, you will also be able to order these registers using this algoritms and giving as a parameter an atribute of the database, check it out here <a href="/order/methods">/order/methods</a> if the attribure is <b>NaN</b> or it contains constraits in the algoritm (decimals or negative number) it will throw an error, thanks for reading this and feel free to use this API
     
 </body>
 </html>
