--- a/routes/pages/orderPages/order.html
+++ b/routes/pages/orderPages/order.html
@@ -77,7 +77,8 @@
     </main>
 
     <script>
-      const url = "http://" + window.location.host;
+      const url = window.location.protocol+ '//' + window.location.host
+
 
       const $ = (el) => document.getElementById(el);
 
