--- a/routes/pages/dbPages/showData.html
+++ b/routes/pages/dbPages/showData.html
@@ -46,9 +46,10 @@
     <main id="main"></main>
 
     <script>
-      const url = window.location.protocol+ '//' + window.location.host
+      const url = window.location.origin
 
       console.log(url)
+
 
       const $ = (el) => document.getElementById(el);
 
