--- a/routes/pages/dbPages/showRole.html
+++ b/routes/pages/dbPages/showRole.html
@@ -48,7 +48,7 @@
     <main id="main"></main>
 
     <script>
-      const url = window.location.protocol+ '//' + window.location.host
+      const url = window.location.origin
 
 
       const $ = (el) => document.getElementById(el);
