--- a/routes/pages/dbPages/logIn.html
+++ b/routes/pages/dbPages/logIn.html
@@ -16,7 +16,8 @@
     </main>
 
     <script>
-      const url = "http://" + window.location.host;
+      const url = window.location.origin
+
 
       const $ = (el) => document.getElementById(el);
 
