--- a/routes/pages/dbPages/newUser.html
+++ b/routes/pages/dbPages/newUser.html
@@ -52,7 +52,8 @@
     </main>
 
     <script>
-      const url = "http://" + window.location.host;
+      const url = window.location.origin
+
 
       const $ = (el) => document.getElementById(el);
 
