--- a/routes/pages/orderPages/order.html
+++ b/routes/pages/orderPages/order.html
@@ -77,7 +77,7 @@
     </main>
 
     <script>
-      const url = window.location.protocol+ '//' + window.location.host
+      const url = window.location.origin
 
 
       const $ = (el) => document.getElementById(el);
