--- a/routes/pages/orderPages/showData.html
+++ b/routes/pages/orderPages/showData.html
@@ -54,8 +54,8 @@
     </main>
 
     <script>
-      const url = window.location.protocol+ '//' + window.location.host
-
+      const url = window.location.origin
+      
 
       const $ = (el) => document.getElementById(el);
 
