--- a/routes/pages/dbPages/showData.html
+++ b/routes/pages/dbPages/showData.html
@@ -7,13 +7,14 @@
     <title>Database</title>
     <style>
         *{
-            color: white;
+            color: rgb(255, 255, 255);
             margin: 0;
             padding: 0;
             font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
         }
-        body{
-          background: #00d9ff12;
+
+        html{
+          background: #50bfe0fb;
         }
         main{
             position: absolute;
@@ -22,6 +23,8 @@
             transform: translate(-50%, -50%);
             background: rgb(27, 96, 182);
             width: 100%;
+            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+            border-radius: 20px;
         }
 
         main div {
@@ -33,12 +36,13 @@
             background: #18a3a8;
             box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
             border-radius: 20px;
-            gap: 100px;
+            gap: 70px;
             padding: 10px;
             margin: 10px;
         }
         main div div label{
             width: 10vw;
+            text-align: center;
         }
     </style>
   </head>
