--- a/routes/pages/dbPages/showRole.html
+++ b/routes/pages/dbPages/showRole.html
@@ -12,15 +12,15 @@
         padding: 0;
         font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
       }
-      body {
-        background: #00d9ff12;
-      }
+      html{
+          background: #50bfe0fb;
+        }
       main {
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        background: rgb(27, 96, 182);
+        background: rgb(70, 130, 204);
         width: 100%;
       }
 
@@ -33,18 +33,27 @@
         background: #18a3a8;
         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
         border-radius: 20px;
-        gap: 100px;
+        gap: 70px;
         padding: 10px;
         margin: 10px;
       }
       main div div label {
         width: 10vw;
+        color: white;
+        text-align: center;
       }
+      input{
+          border-radius: 10px;
+          outline: None;
+          border: none;
+          padding: 8px;
+          background: #d4d0d0;
+        }
     </style>
   </head>
   <body>
     <input type="text" placeholder="Write a role" id="input" />
-    <button id="button">Search</button>
+    <input id="button" type="button" value="Search"/>
     <main id="main"></main>
 
     <script>
