--- a/routes/pages/landPage.html
+++ b/routes/pages/landPage.html
@@ -5,11 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome</title>
+    <style>
+      html{
+          background: #50bfe0fb;
+        }
+    </style>
   </head>
   <body>
     <h1>API Presentation</h1>
     <br />Hello everyone, welcome to my API, here you will be able to do two
-    thigs, if you want to consult a database with usernames and passwords, put
+    things, if you want to consult a database with usernames and passwords, put
     in the pathname <a href="/db">/db</a> or if you want to organize another
     database with different order algorithms, put in the path
     <a href="/order">/order</a>
