--- a/routes/pages/orderPages/explain.html
+++ b/routes/pages/orderPages/explain.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        html{
+          background: #50bfe0fb;
+        }
+    </style>
 </head>
 <body>
     <h1>Order Algorithms</h1><br/>Welcome to order algorithms, here you will be able to order a public database, which you can see in the path next path <a href="/order/data">Database</a>, you will also be able to order these registers using this algoritms and giving as a parameter an atribute of the database, check it out here <a href="/order/methods">/order/methods</a> if the attribure is <b>NaN</b> or it contains constraits in the algoritm (decimals or negative number) it will throw an error, thanks for reading this and feel free to use this API
