--- a/routes/pages/dbPages/showRole.html
+++ b/routes/pages/dbPages/showRole.html
@@ -12,9 +12,9 @@
         padding: 0;
         font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
       }
-      html{
-          background: #50bfe0fb;
-        }
+      html {
+        background: #50bfe0fb;
+      }
       main {
         position: absolute;
         top: 50%;
@@ -42,23 +42,25 @@
         color: white;
         text-align: center;
       }
-      input{
-          border-radius: 10px;
-          outline: None;
-          border: none;
-          padding: 8px;
-          background: #d4d0d0;
-        }
+      input {
+        border-radius: 10px;
+        outline: None;
+        border: none;
+        padding: 8px;
+        background: #d4d0d0;
+      }
+      .header{
+        color:black !important;
+      }
     </style>
   </head>
   <body>
     <input type="text" placeholder="Write a role" id="input" />
-    <input id="button" type="button" value="Search"/>
+    <input id="button" type="button" value="Search" />
     <main id="main"></main>
 
     <script>
-      const url = window.location.origin
-
+      const url = window.location.origin;
 
       const $ = (el) => document.getElementById(el);
 
@@ -70,25 +72,36 @@
 
       button.addEventListener("click", (e) => {
         e.preventDefault();
-        getData(input.value)
+        getData(input.value);
       });
 
       async function getData(role) {
-        body.innerHTML = ''
+        body.innerHTML = "";
 
-        if (role === '' || role === ' '){
-            body.innerHTML = 'No data found'
-            return 
+        if (role === "" || role === " ") {
+          body.innerHTML = "No data found";
+          return;
         }
         const req = await fetch(url + `/api/db/role/${role}`);
-        const {message} = await req.json();
+        const { message } = await req.json();
 
-        if (!req.ok){
-            body.innerHTML = message;
-            return
+        if (!req.ok) {
+          body.innerHTML = message;
+          return;
         }
 
         const div = document.createElement("div");
+
+        const div_header_separator = document.createElement("div");
+
+        Object.keys(message[0]).forEach((el) => {
+          const label_header = document.createElement("label");
+          label_header.className = "header";
+          label_header.innerText = el;
+          div_header_separator.appendChild(label_header);
+        });
+        div.appendChild(div_header_separator);
+
         message.forEach((el) => {
           const divSeparator = document.createElement("div");
           Object.entries(el).forEach((element) => {
@@ -99,6 +112,18 @@
           div.appendChild(divSeparator);
         });
         body.appendChild(div);
+
+        // const div = document.createElement("div");
+        // message.forEach((el) => {
+        //   const divSeparator = document.createElement("div");
+        //   Object.entries(el).forEach((element) => {
+        //     const label = document.createElement("label");
+        //     label.innerText = element[1];
+        //     divSeparator.appendChild(label);
+        //   });
+        //   div.appendChild(divSeparator);
+        // });
+        // body.appendChild(div);
       }
     </script>
   </body>
